k8s/beat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-beat
  template:
    metadata:
      labels:
        app: rss-beat
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: beat
          image: ghcr.io/conradylx/rss-summarizer-backend:latest
          imagePullPolicy: Always
          command: ["celery", "-A", "app.worker.celery_app", "beat", "--loglevel=info"]
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
