k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-postgres
  template:
    metadata:
      labels:
        app: rss-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
